--- a/index.html
+++ b/index.html
@@ -106,24 +106,24 @@
             </div>
         </div>
 
-      <center class="mt-5"> <h1>Get In Touch</h1></center>
+      <center class="mt-5"> <h1>Subscribe to our Newsletter</h1></center>
         
 
 
-
+<form>
+  <div class="form-group">
+    <label for="exampleFormControlInput1">Email address</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+  </div>
+        </form> 
 <div class="class">
 <div class="row">
 <div class="col-4">
 </div>
 <div class="col-8  >
-  <p class="line">Fill out this form and we will get back to you as soon as possible!</p>
-  <p>Name:(required) <input type="text" required /></p>
-  <p>Instagram Handle:(required) <input type="text" required /></p>
-  <p>
-    Email:(required) <input type="email" name="email" id="email" required />
-    <p>Contact Number:(required) <input type="number" name="number" id="number" required></p>
-  </p>
-  <p>Tell us why you are contacting! <input type="text" required></p>
+  <p class="line">Leave your email address to get the latest updates!</p>
+                 <butto
+  
 </form>
 </div>
 </div>
