--- a/index.html
+++ b/index.html
@@ -115,22 +115,10 @@
     <label for="exampleFormControlInput1">Email address</label>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
   </div>
-        </form> 
-<div class="class">
-<div class="row">
-<div class="col-4">
-</div>
-<div class="col-8  >
-  <p class="line">Leave your email address to get the latest updates!</p>
-                 <butto
-  
+    <p class="line">Leave your email address to get the latest updates!</p>
+          <center> <input  type="submit" value="Subscribe"> </center> 
 </form>
-</div>
-</div>
-<center> <input  type="submit" value="Submit"> </center>
 
-
-</div>
 
 
 
