--- a/index.html
+++ b/index.html
@@ -111,13 +111,15 @@
 
 
 <form>
-  <div class="form-group">
-    <label for="exampleFormControlInput1">Email address</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-  </div>
-    <p class="line">Leave your email address to get the latest updates!</p>
-          <center> <input  type="submit" value="Subscribe"> </center> 
-</form>
+ <div class="form-group">
+    
+        <center> <label for="exampleFormControlInput1">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <br>
+      <center> <input  type="submit" value="Subscribe"> </center> 
+    </form>   
+
 
 
 
