add switch toggle button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             </div>
           </div>
           </div>
+          <p class="switch-text">Switch Mode</p>
+          <div class="switch-container">
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+          </div>
       </nav>
   
       <section class="container-fluid px-0">
