--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                       <a href="#About" class="nav-link">ABOUT</a>
                   </li>
                   <li class="nav-item">
-                      <a href="#Buy" class="nav-link">BUY ONLINE</a>
+                      <a href="products.php" class="nav-link">BUY ONLINE</a>
                   </li>
               </ul>
             </div>
